--- a/WebApplication1/Areas/Catalog/Views/Article/Create.cshtml
+++ b/WebApplication1/Areas/Catalog/Views/Article/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using WebApplication1.Areas.Catalog.Entites
-@model WebApplication1.Areas.Catalog.Entites.Article
+﻿@model WebApplication1.Areas.Catalog.Entites.Article
 
 
 @using (Ajax.BeginForm("Create", "Article", new AjaxOptions() { UpdateTargetId = "articles" }))
