--- a/WebApplication1/Areas/Catalog/Views/Category/Create.cshtml
+++ b/WebApplication1/Areas/Catalog/Views/Category/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using WebApplication1.Areas.Catalog.Entites
-@model WebApplication1.Areas.Catalog.Entites.Category
+﻿@model WebApplication1.Areas.Catalog.Entites.Category
 
 @*@{
     ViewBag.Title = "Create Category";
